# brython-jinja2

./: .gitignore  .gitmodules  LICENSE  README.rst  manage.py  pylintrc  requirements.txt  setup.cfg  snippets.py  tox.ini
brython_jinja2/: context.py  defaults.py  environment.py  exceptions.py  expression.py  interpolatedstr.py  lexer.py  nodes.py  parser.py  rendernodes.py  template.py
brython_jinja2/platform/: __init__.py  bs4.py
brython_jinja2/platform/brython/: bs4.py
brython_jinja2/platform/linux/: __init__.py
brython_jinja2/utils/: __init__.py  events.py  functools.py  htmlparser.py  observer.py
doc/en/: api.rst  conf.py  contents.rst  contributing.rst  index.rst  installing.rst
doc/en/_templates/: links.html  sidebarintro.html
doc/en/api/: brython_jinja2.platform.brython.rst  brython_jinja2.platform.linux.rst  brython_jinja2.platform.rst  brython_jinja2.rst  brython_jinja2.utils.rst  expression.rst  modules.rst  template.rst
management/: __init__.py  doc.py  test.py  utils.py
src/brython_jinja2/: __init__.py  context.py  defaults.py  environment.py  exceptions.py  expression.py  interpolatedstr.py  lexer.py  nodes.py  parser.py  rendernodes.py  template.py  templatenodes.py
src/brython_jinja2/platform/: __init__.py  bs4.py  typing.py
src/brython_jinja2/utils/: __init__.py  delayedupdater.py  events.py  functools.py  parser_utils.py  pubsub.py
tests/: utils.py
tests/brython_jinja2/: test_context.py  test_expression.py  test_interpolatedstr.py  test_lexer.py  test_location.py  test_nodes.py  test_observer.py  test_parser.py  test_templatenodes.py
web/: Lib  brython.js  brython_dist.js  index.html  libs
web/lib/: brython_jinja2  console.py
(+6 files in other folders)
