[metadata]
name = brython-jinja2
author = Jonathan L. Verner
author-email = jonathan@temno.eu
summary = Brython version of the Jinja2 templating library.
description-file = README.rst
home-page = https://gitlab.com/Verner/brython-jinja2
license = MIT License
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Environment :: Web Environment
    Framework :: Django
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP
keywords =
    brython
    jinja2

[files]
packages =
    brython_jinja2

